changed z-index of all background animations, trying to solve the issue of sun jumping in front of buildings on iphone landscape.

--- a/assets/main.css
+++ b/assets/main.css
@@ -32,7 +32,7 @@
 
 
 .sun{
-  z-index: -2;
+  z-index: -5;
   width:49vh;
   height:49vh;
   border-radius:100%;
@@ -54,7 +54,7 @@
 }
 
 .building{
-    z-index: -1;
+    z-index: 20;
     position:absolute;
     content:'';
     bottom:34%;
@@ -65,7 +65,7 @@
 }
 
 .buildingDetail{
-  z-index: -1;
+  z-index: 20;
   position:absolute;
   content:'';
   bottom:var(--detail-bottom);
@@ -77,7 +77,7 @@
 }
 
 .detailRoof{
-  z-index:var(--detail-layer);
+  z-index: 20;
   position:absolute;
   content:'';
   bottom:var(--detail-bottom);
@@ -91,7 +91,7 @@
 }
 
 .window{
-  z-index: -1;
+  z-index: 30;
   position:absolute;
   content:'';
   bottom:var(--window-bottom);
